--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-  <head><meta charset="utf-8"><title>CI/CD Lab</title></head>
+  <head><meta charset="utf-8"><title>CI/CD Lab- Devolop branch</title></head>
   <body>
     <h1 id="greeting">Hello from CI/CD lab</h1>
     <h2> ajaz ck </h2>
